--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "url": "https://github.com/comp426-2023-spring/a03-mariamrafique1/issues"
   },
   "homepage": "https://github.com/comp426-2023-spring/a03-mariamrafique1#readme",
-  
+   "bin": {
+    "node-rps": "./bin/rps-cli.js",
+    "node-rpsls": "./bin/rpsls-cli.js"
+  },
   "dependencies": {
     "minimist": "^1.2.8"
 },
